jenkins-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: jenkins
    node: master
  name: jenkins
spec:
  replicas: 1
  selector:
    app: jenkins
    deploymentconfig: jenkins
    node: master
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        deploymentconfig: jenkins
        node: master
    spec:
      containers:
      - image: jenkins/jenkins:jdk11
        imagePullPolicy: Always
        name: jenkins
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-master
      volumes:
      - name: jenkins-master
        persistentVolumeClaim:
          claimName: jenkins-master
  triggers:
  - type: ConfigChange
