jnlp-agent-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: jenkins
    name: jnlp-slave
    node: slave
  name: jnlp-slave
spec:
  replicas: 1
  selector:
    app: jenkins
    deploymentconfig: jnlp-slave
    name: jnlp-slave
    node: slave
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        deploymentconfig: jnlp-slave
        name: jnlp-slave
        node: slave
    spec:
      containers:
      - command:
        - jenkins-slave
        - -tunnel
        - jenkins:50000
        - maven
        image: jenkins/jnlp-slave:latest-jdk11
        imagePullPolicy: IfNotPresent
        name: jnlp-slave
        livenessProbe:
          exec:
            command:
              - curl
              - '-sSfI'
              - 'http://jenkins:8080/whoAmI/'
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 95
        readinessProbe:
          exec:
            command:
              - curl
              - '-sSfI'
              - 'http://jenkins:8080/whoAmI/'
          failureThreshold: 3
          initialDelaySeconds: 7
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 90        
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
        volumeMounts:
        - mountPath: /home/jenkins/.jenkins
          name: jnlp-slave-home
        - mountPath: /home/jenkins
          name: jenkins-slave
      volumes:
      - emptyDir: {}
        name: jnlp-slave-home
      - name: jenkins-slave
        persistentVolumeClaim:
          claimName: jenkins-j11
  - type: ConfigChange
