ols-router-admin-dc.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: ols-router-admin
      name: ols-router-admin-k8s
    name: ols-router-admin
  spec:
    selector:
      matchLabels:
        app: ols-router-admin
        name: ols-router-admin-k8s
    template:
      metadata:
        labels:
          app: ols-router-admin
          name: ols-router-admin-k8s
      spec:
        containers:
        - image: docker-registry.default.svc:5000/3aa7ll-tools/ols-router-admin:latest
          imagePullPolicy: Always
          lifecycle:
            postStart:
              exec:
                command:
                - cp
                - /ROOT.war
                - /app/int.war
          name: war
          volumeMounts:
          - mountPath: /app
            name: app-volume
        - name: tomcat
          command:
          - catalina.sh
          - run
          image: tomcat:9-jre11
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: catalina-http
            protocol: TCP
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /usr/local/tomcat/webapps
            name: app-volume
          - mountPath: /usr/local/tomcat/logs
            name: log-volume
          - mountPath: /usr/local/tomcat/work
            name: wrk-volume
          - mountPath: /usr/local/tomcat/conf/Catalina
            name: cbase-volume
          - mountPath: /usr/local/tomcat/temp
            name: tmp-volume
        volumes:
        - emptyDir: {}
          name: app-volume
        - emptyDir: {}
          name: log-volume
        - emptyDir: {}
          name: wrk-volume
        - emptyDir: {}
          name: cbase-volume
        - emptyDir: {}
          name: tmp-volume
- apiVersion: v1
  kind: Service
  metadata:
    name: ols-router-admin
  spec:
    ports:
    - name: ols-router-admin
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ols-router-admin
    type: ClusterIP
kind: List
metadata:
