ols-router-data-dc-template.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: data-deployment
parameters:
  - name: SITE_NAME
    required: true
  - name: SITE_REPO
    required: true
  - name: REPO_BRANCH
    required: true
  - name: WEBHOOK_PATH
    required: true
  - name: WEBHOOK_SECRETS
    generate: expression
    from: "[a-zA-Z0-9]{64}"
    required: true
objects:
- apiVersion: v1
  stringData:
    caddy.webhook: ${WEBHOOK_SECRETS}
  kind: Secret
  metadata:
    name: ${SITE_NAME}-webhook-key
  type: Opaque
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ols-router-${SITE_NAME}
    name: ols-router-${SITE_NAME}
  spec:
    ports:
    - name: http-proxy
      port: 8080
      targetPort: 8080
      protocol: TCP
    selector:
      app: ols-router-${SITE_NAME}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
    labels:
      app: ols-router-${SITE_NAME}
    name: ols-router-${SITE_NAME}
  spec:
    selector:
      matchLabels:
        app: ols-router-${SITE_NAME}
    template:
      metadata:
        labels:
          app: ols-router-${SITE_NAME}
      spec:
        containers:
        - command:
          - caddy
          - -quic
          - -conf
          - /conf/Caddyfile
          image: abiosoft/caddy:no-stats
          imagePullPolicy: Always
          name: www
          volumeMounts:
          - mountPath: /conf
            name: caddy-conf
          - mountPath: /srv
            name: ${SITE_NAME}
        volumes:
        - configMap:
            items:
            - key: caddifile
              path: Caddyfile
            name: ${SITE_NAME}-caddifile
          name: caddy-conf
        - name: ${SITE_NAME}
          persistentVolumeClaim:
            claimName: ${SITE_NAME}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      volume.beta.kubernetes.io/storage-class: gluster-file
    name: ${SITE_NAME}
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 10Gi
- apiVersion: v1
  data:
    caddifile: |-
        0.0.0.0:8080 {
        git {$siteRepo} /srv {
         branch {$branch}
         hook {$hookPath} {$hookKey}
        }
        root /srv
        gzip
        log stdout
        errors stdout
        }
  kind: ConfigMap
  metadata:
    name: ${SITE_NAME}-caddifile
