ols-router-web-dc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ols-router-web
spec:
  ports:
  - name: ols-router-web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ols-router-web
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ols-router-web
    name: ols-router-web
  name: ols-router-web-k8s
spec:
  selector:
    matchLabels:
      app: ols-router-web
      name: ols-router-web-k8s
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ols-router-web
        name: ols-router-web-k8s
    spec:
      containers:
      - command:
        - catalina.sh
        - run
        image: tomcat:9-jre11-slim
        imagePullPolicy: IfNotPresent
        name: tomcat
        ports:
        - containerPort: 8080
          name: catalina-http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8080
            scheme: HTTP

          initialDelaySeconds: 270
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1
            memory: 4Gi
        volumeMounts:
        - mountPath: /usr/local/tomcat/logs
          name: tc-work
        - mountPath: /usr/local/tomcat/work
          name: tc-work
        - mountPath: /usr/local/tomcat/temp
          name: tc-work
        - mountPath: /usr/local/tomcat/conf/Catalina
          name: tc-conf
        - mountPath: /usr/local/tomcat/webapps
          name: app-volume
      volumes:
      - emptyDir: {}
        name: tc-work
      - emptyDir: {}
        name: tc-conf
      - emptyDir: {}
        name: app-volume
