caddy-minio-pvc-template.yaml
apiVersion: v1
kind: Template
labels:
    template: caddy-minio-pvc
message: |-
  [...]
metadata:
  annotations:
    description: |-
      Router-data Template for use in OpenShift.

      WARNING: Any configuration stored will be lost upon pod destruction. ConfigMaps should be used for codified configuration.
    iconClass: icon-other-unknown
    openshift.io/display-name: Caddy-Minio-PVC
    openshift.io/documentation-url: https://github.com/bcgov/ols-router
    openshift.io/long-description: This template provides sample a caddy/minio with a shared PCV.
    openshift.io/provider-display-name: DataBC-OLS
    openshift.io/support-url: https://github.com/bcgov/ols-router
    tags: geocoder,router,caddy,minio
  name: caddy-minio-pvc-template
parameters:
  - description: A common label that will be applied to all objects
    displayName: App Label
    name: APPLICATION_NAME
    required: true
    value: router-data
  - description: The name of the Deployment Environment e.g. test, prod, dlv - used for the caddy hostname.
    displayName: Deployment Environment
    name: DEPLOYMENT_ENV
    required: true
    value: -dlv
  - description: The name of the Caddy service.
    displayName: Caddy Service Name
    name: CADDY_SERVICE_NAME
    required: true
    value: caddy
  - description: The name of the minio service.
    displayName: Minio Service Name
    name: MINIO_SERVICE_NAME
    required: true
    value: minio
  - description: Default route subdomain - use pathfinder.gov.bc.ca
    displayName: Route subdomain
    name: ROUTE_SUBDOMAIN
    required: true
    value:  192.168.64.4.nip.io
  - description: Internal route subdomain
    displayName: Route subdomain
    name: INTERNAL_ROUTE_SUBDOMAIN
    required: true
    value:  pathfinder.bcgov
objects:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  #
  # Caddy DeploymentConfig
  #
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${CADDY_SERVICE_NAME}
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APPLICATION_NAME}
          deploymentconfig: ${CADDY_SERVICE_NAME}
      spec:
        containers:
        - args:
          - /conf/Caddyfile
          command:
          - caddy
          - -quic
          - -conf
          image: abiosoft/caddy:no-stats
          imagePullPolicy: IfNotPresent
          name: www
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /conf
            name: caddy-conf
          - mountPath: /data
            name: app-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: app-volume
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}-pvc
            #claimName: minio-pv-claim
        - configMap:
            defaultMode: 420
            items:
            - key: caddifile
              path: Caddyfile
            name: caddy-conf-${APPLICATION_NAME}
          name: caddy-conf
    test: false
    triggers:
    - type: ConfigChange
- apiVersion: apps.openshift.io/v1
  #
  # Minio DeploymentConfig
  #
  kind: DeploymentConfig
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${MINIO_SERVICE_NAME}
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APPLICATION_NAME}
          deploymentconfig: ${MINIO_SERVICE_NAME}
      spec:
        containers:
        - env:
          - name: MINIO_ACCESS_KEY
            valueFrom:
              secretKeyRef:
                key: minioAccessKey
                name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
                #name: minio
          - name: MINIO_SECRET_KEY
            valueFrom:
              secretKeyRef:
                key: minioSecretKey
                name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
                #name: minio
          - name: MINIO_CONFIG_DIR
            value: /tmp
          - name: MINIO_DATA_DIR
            value: /data
          image: docker-registry.default.svc:5000/openshift/minio
          imagePullPolicy: Always
          name: minio
          ports:
          - containerPort: 9000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: minio-vol
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: minio-vol
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}-pvc
            #claimName: minio-pv-claim
    test: false
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
    #name: ${APPLICATION_NAME}
  spec:
    ports:
    - name: 9000-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      deploymentconfig: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
    #name: ${APPLICATION_NAME}
  spec:
    ports:
    #- name: 8080-tcp
    - name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
    #name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
    # TODO
    # Questions:
    #    1. why is the route not listed in the overview page?  trivial but it bugs me. it WAS showing up before!
    #    2. Should routes be internal only? e.g. route-to-this-app.pathfinder.bcgov
    #
  spec:
    host: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}${DEPLOYMENT_ENV}.${ROUTE_SUBDOMAIN}
    port:
      targetPort: 9000-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
      #name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
      weight: 100
    wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
    #name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
    # TODO
    # Questions:
    #    1. why is the route not listed in the overview page?  trivial but it bugs me. it WAS showing up before!
    #    2. Should routes be internal only? e.g. route-to-this-app.pathfinder.bcgov
    #
  spec:
    # host: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}.${ROUTE_SUBDOMAIN}
    host: ${APPLICATION_NAME}${DEPLOYMENT_ENV}.${ROUTE_SUBDOMAIN}
    port:
      targetPort: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
    tls:
      termination: edge
    to:
      kind: Service
      name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
      #name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
      weight: 100
    wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${APPLICATION_NAME}
      env: internal
      route: within-cluster
    name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}-int
    #name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
    # TODO
    # Questions:
    #    1. why is the route not listed in the overview page?  trivial but it bugs me. it WAS showing up before!
    #    2. Should routes be internal only? e.g. route-to-this-app.pathfinder.bcgov
    #
  spec:
    host: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}.${INTERNAL_ROUTE_SUBDOMAIN}
    port:
      # targetPort: 8080-tcp
      targetPort: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
    to:
      kind: Service
      name: ${CADDY_SERVICE_NAME}-${APPLICATION_NAME}
      #name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
      weight: 100
    wildcardPolicy: None
# TODO
# What to name This
# What size works?
#
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      volume.beta.kubernetes.io/storage-class: gluster-file
    finalizers:
    - kubernetes.io/pvc-protection
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi

- apiVersion: v1
  data:
    caddifile: |-
      0.0.0.0:8080
      root /data
      log stdout
      errors stdout
      ext .png .kml .html .htm
    #caddifile: |-
    #  0.0.0.0:2015
    #    git https://8262169f6c9921fb0cc4eca5d21fd61f98691bb1@gogs.data.gov.bc.ca/dbcols/ols-router-data.git /data/router {
    #    branch qa
    #    }
    #  root /data/router
    #  log stdout
    #  errors stdout
    #  ext .png .kml .html .htm
  kind: ConfigMap
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: caddy-conf-${APPLICATION_NAME}
- apiVersion: v1
  data:
    minioAccessKey: cm91dGVyZGF0YQ==
    minioSecretKey: cm91dGVyZGF0YUBnb3YuYmMuY2E=
  kind: Secret
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${MINIO_SERVICE_NAME}-${APPLICATION_NAME}
  type: Opaque
