ols-router-admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ols-router-admin
  annotations:
    haproxy.router.openshift.io/ip_whitelist: 142.34.5.0/26 142.34.140.0/26
spec:
  host: router-admin-dev.apps.gov.bc.ca
  path: /int/
  tls:
    termination: edge
  port:
    targetPort: ols-admin
  to:
    kind: Service
    name: ols-admin
