router.template.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: route-planner-template-databc
metadata:
  name: route-planner-template-databc

  annotations:
    openshift.io/display-name: "DataBC Route Planner API"
    description: >-
      An example Route Planner API application with a Cassandra cluster,
      a Data Admin WebApp and a Router Planer API. For more information
      about using this template, including OpenShift considerations, see
      https://docs.openshift.com/container-platform/4.6/openshift_images/using-templates.html.

      Note: Logs for router nodes are persisted in PCVs.
    openshift.io/long-description: >-
      This template defines resources needed to develop a Route Planner API
      application, including a build configuration, application DeploymentConfig, and
      configuration database DeploymentConfig.  The database is stored in
      persistent storage.

    tags: "router,java,gis,location"
    iconClass: icon-spring
    openshift.io/provider-display-name: "Data Systems and Services, DataBC"
    openshift.io/documentation-url: "https://github.com/bcgov/ols-router"
    openshift.io/support-url: "https://access.redhat.com"
message: |-
  [...]
parameters:
  - name: TOOLS_NAMESPACE
    description: The tools namspace where image streams will be pulled from.
    required: true
  - description: A common label that will be applied to all objects
    displayName: App Label
    name: APP_NAME
    required: true
    value: router
  - description: The environment i.e. on of -dev, -test, -prod.  This will be appended to hostnames so routes don't collide across namespaces.
    displayName: App Environment
    name: ENV
    required: true
  - description: The hostname for the Admin App.
    displayName: Admin configurtion app hostname
    name: ROUTER_ADMIN_HOSTNAME
    required: true
    value: router-admin
  - description: The hostname for the Router API App.
    displayName: Router API endpoint hostname.
    name: ROUTER_API_HOSTNAME
    required: true
    value: router-api
  - description: Default route subdomain - use apps.silver.devops.gov.bc.ca
    displayName: Route subdomain
    name: ROUTE_SUBDOMAIN
    required: true
    value:  apps.silver.devops.gov.bc.ca
  - description: minio secret for the data provider access to pull router configs
    displayName: MinIO secret
    name: MINIO_SECRET
    required: true
    value:  minio-router-datastore-dlv
  - name: ROUTER_IS_TAG
    description: "The image stream tag to use for the ols-router-sidecar"
    required: true
  - name: DATA_ADMIN_IS_TAG
    description: "The image stream tag to use for the ols-admin-sidecar"
    required: true
  - name: MINIO_BUCKET
    description: "minio bucket containing config files"
    value: router-configs-dev
  - name: DATA_PROVIDER_PVC
    description: persistent volume claim storing router config files
    value: router-datastore-dlv-pv

objects:

# # StatefulSet for ols-router-web
- kind: StatefulSet
  apiVersion: apps/v1
  metadata:
    labels:
      app: ols-router-web
      statefulset: ols-router-web
    name: ols-router-web
    annotations:
      image.openshift.io/triggers: >-
        [{"from":{"kind":"ImageStreamTag","name":"ols-router-sidecar:${ENV}","namespace":"1475a9-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"tomcat\")].image"}]
  spec:
    podManagementPolicy: OrderedReady
    replicas: 4
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        statefulset: ols-router-web
    serviceName: ols-router-web
    template:
      metadata:
        labels:
          app: ols-router-web
          statefulset: ols-router-web
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: statefulset
                  operator: In
                  values:
                  - ols-router-web
              topologyKey: kubernetes.io/hostname
        containers:
        - command:
          - catalina.sh
          - run
          image: >-
              image-registry.openshift-image-registry.svc:5000/${TOOLS_NAMESPACE}/ols-router-sidecar:${ROUTER_IS_TAG}
          imagePullPolicy: IfNotPresent
          name: tomcat
          ports:
          - containerPort: 8080
            name: catalina-http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 270
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "500m"
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /usr/local/tomcat/logs
            name: router-logs
          - mountPath: /usr/local/tomcat/work
            name: tc-work
          - mountPath: /usr/local/tomcat/temp
            name: tc-work
          - mountPath: /usr/local/tomcat/conf/Catalina
            name: tc-conf
          - name: router-config
            mountPath: /apps/config/router
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: tc-work
        - emptyDir: {}
          name: tc-conf
        - name: router-config
          persistentVolumeClaim:
            claimName: ${DATA_PROVIDER_PVC}
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
        name: router-logs
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: netapp-block-standard
# Deployment for ols-router-admin
- kind: Deployment
  apiVersion: apps/v1
  metadata:
    generation: 1
    labels:
      app: ols-router-admin
      name: ols-router-admin
      template: ols-router-admin
    name: ols-router-admin
    annotations:
      image.openshift.io/triggers: >-
        [{"from":{"kind":"ImageStreamTag","name":"ols-router-admin-sidecar:${ENV}","namespace":"1475a9-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"tomcat\")].image"}]
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: ols-router-admin
        name: ols-router-admin
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ols-router-admin
          name: ols-router-admin
      spec:
        containers:
        - command:
          - catalina.sh
          - run
          imagePullPolicy: IfNotPresent
          name: tomcat
          image: >-
            image-registry.openshift-image-registry.svc:5000/${TOOLS_NAMESPACE}/ols-router-admin-sidecar:${DATA_ADMIN_IS_TAG}
          ports:
          - containerPort: 8080
            name: catalina-http
            protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /usr/local/tomcat/logs
            name: tc-work
          - mountPath: /usr/local/tomcat/work
            name: tc-work
          - mountPath: /usr/local/tomcat/temp
            name: tc-work
          - mountPath: /usr/local/tomcat/conf/Catalina
            name: tc-conf
          - name: router-config
            mountPath: /apps/config/router
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: tc-work
        - emptyDir: {}
          name: tc-conf
        - name: router-config
          persistentVolumeClaim:
            claimName: ${DATA_PROVIDER_PVC}
  status: {}
# Serice for ols-router-admin
- kind: Service
  apiVersion: v1
  metadata:
    creationTimestamp: null
    name: ols-router-admin
  spec:
    ports:
    - name: ols-router-admin
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ols-router-admin
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
# Route for ols-router-admin
- kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    creationTimestamp: null
    name: ols-router-admin
  spec:
    host: ${ROUTER_ADMIN_HOSTNAME}-${ENV}.${ROUTE_SUBDOMAIN}
    path: /int/
    port:
      targetPort: ols-router-admin
    tls:
      termination: edge
    to:
      kind: Service
      name: ols-router-admin
      weight: 100
    wildcardPolicy: None
  status:
    ingress: null
# Service for ols-router-web
- kind: Service
  apiVersion: v1
  metadata:
    creationTimestamp: null
    name: ols-router-web
  spec:
    ports:
    - name: ols-router-web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ols-router-web
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
# For initial deployment you may want to create a route.
# Routes should be managed through the Kong API Gateway.
# see ... for instructions on how to configure Kong gateway
# routes.
- kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    creationTimestamp: null
    name: ols-router-api
  spec:
    host: ${ROUTER_API_HOSTNAME}-${ENV}.${ROUTE_SUBDOMAIN}
    port:
      targetPort: ols-router-web
    tls:
      termination: edge
    to:
      kind: Service
      name: ols-router-web
      weight: 100
    wildcardPolicy: None
  status:
    ingress: null
- kind: NetworkPolicy
  apiVersion: networking.k8s.io/v1
  metadata:
    name: allow-from-openshift-ingress
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
    podSelector: {}
    policyTypes:
    - Ingress
- kind: NetworkPolicy
  apiVersion: networking.k8s.io/v1
  metadata:
    name: allow-same-namespace
  spec:
    ingress:
    - from:
      - podSelector: {}
    podSelector: {}
    policyTypes:
    - Ingress
- kind: NetworkPolicy
  apiVersion: networking.k8s.io/v1
  metadata:
    name: deny-by-default
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
- kind: NetworkPolicy
  apiVersion: networking.k8s.io/v1
  metadata:
    name: allow-traffic-from-gateway-to-${APP_NAME}-${ENV}
  spec:
    podSelector:
      matchLabels:
        app: ols-router-web
    ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                environment: test
                name: 264e6f
      - from:
          - namespaceSelector:
              matchLabels:
                environment: prod
                name: 264e6f
